<resources>
    <string name="app_name">SoporTI</string>
    <string name="create_user">Crear usuario</string>
    <string name="first_name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="register_user">Registrar usuario</string>
    <string name="login">Login</string>
    <string name="back_to_login">Volver al login</string>
    <string name="welcome">Bienvenid@</string>
    <string name="logout">Cerrar sesión</string>
    <string name="title_activity_tickets_list">TicketsListActivity</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add">Nuevo</string>
    <string name="title">Título</string>
    <string name="description">Descripción</string>
    <string name="register_ticket">Registrar ticket</string>
    <string name="cancel">Cancelar</string>
    <string name="soporti">SoporTI</string>
    <string name="enter_your_name">Ingresa tu nombre</string>
    <string name="enter_your_surname">Ingresa tu apellido</string>
    <string name="example_mail">example@mail.com</string>
    <string name="enter_secure_password">Ingresa una contraseña segura</string>
    <string name="enter_ticket_title">Ingrese un título para el ticket</string>
    <string name="describe_problem">Describa el problema</string>
    <string name="category">Categoría</string>
    <string name="new_category">Nueva categoría</string>
    <string name="enter_category_grouper">Ingrese un agrupador para la categoría</string>
    <string name="enter_category_name">Ingrese un nombre para la categoría</string>
    <string name="subcategory">Subcategoría</string>
    <string name="register_category">Registrar categoría</string>
    <string name="categories">Categorías</string>
    <string name="delete">Eliminar</string>
    <string name="category_form">Categoría:</string>
    <string name="subcategory_form">Subcategoría:</string>
    <string name="existent_categories">Categorías existentes</string>
    <string name="edit">Editar</string>
    <string name="save">Guardar</string>
    <string name="soporti_tickets">SoporTI: Tickets</string>
    <string name="new_ticket">Nuevo ticket</string>
    <string name="state_form">Estado:</string>
    <string name="state">Estado</string>
    <string name="your_tickets">Tus tickets</string>
    <string name="date_form">Fecha:</string>
    <string name="date">Fecha</string>
    <string name="ticket">Ticket</string>
    <string name="description_form">Descripción:</string>
    <string name="user_form">Usuario:</string>
    <string name="user">Usuario</string>
    <string name="replies">Respuestas</string>
    <string name="reply">Responder</string>
    <string name="manage">Gestionar</string>
    <string name="reply_ticket">Responder ticket</string>
    <string name="enter_your_response">Ingrese su respuesta</string>
    <string name="response">Respuesta</string>
    <string name="last_reply">Última respuesta</string>
    <string name="user_name">Nombre del usuario</string>
    <string name="said_form">\u0020 dijo:</string>
    <string name="answer">Respuesta</string>
    <string name="type">Tipo</string>
    <string name="users">Usuarios</string>
    <string name="new_user">Nuevo usuario</string>
    <string name="search">Buscar</string>
    <string name="enter_name">Ingresa el nombre</string>
    <string name="enter_surname">Ingresa el apellido</string>
    <string name="unassigned_tickets">Tickets sin asignar</string>
    <string name="choose_a_category">Seleccione una categoría</string>
    <string name="assign_ticket">Asignar ticket</string>
    <string name="type_form">Tipo:</string>
    <string name="support_user">Usuario soporte</string>
    <string name="support_user_form">Encargado:</string>
    <string name="no_replies_yet">No hay respuestas aún</string>
    <string name="finish_ticket">Finalizar ticket</string>
    <string name="edit_category">Editar categoría</string>
    <string name="finished_tickets">Tickets finalizados</string>
    <string name="finished_ticket">Ticket finalizado</string>
    <string name="filter_by_category">Filtrar por categoría</string>
    <string name="no_information">No hay información.</string>
    <string name="reports">Reportes</string>
    <string name="report_by_type">Reporte por tipo</string>
    <string name="tickets_count_form">Cantidad de tickets:</string>
    <string name="number_of_tickets">Número de tickets</string>
    <string name="resolution_time_form">Tiempo promedio de resolución:</string>
    <string name="time">Tiempo</string>
    <string name="finish_date_form">Fecha de finalización:</string>
    <string name="tickets_by_type">Tickets por tipo</string>
    <string name="tickets_by_category">Tickets por categoría</string>
    <string name="report_by_type_and_category">Reporte por tipo y categoría</string>
    <string name="view_files">Ver archivos</string>
    <string name="new_object">Nuevo</string>
    <string name="files">Archivos</string>
    <string name="attached_files">Archivos adjuntos</string>
    <string name="new_file">Nuevo archivo</string>
    <string name="choose_file">Seleccionar archivo</string>
    <string name="chosen_file">Archivo seleccionado</string>
    <string name="no_file_chosen">No hay archivo seleccionado</string>
    <string name="file_form">Nombre del archivo:</string>
    <string name="file">Archivo</string>
    <string name="name_form">Nombre:</string>
    <string name="name">Nombre</string>
    <string name="email_form">Email:</string>
    <string name="edit_user">Editar usuario</string>
    <string name="forgot_password">Olvidé mi contraseña</string>
    <string name="edit_user_role">Editar rol de usuario</string>
    <string name="rol_by_user">Roles por usuario</string>
    <string name="soporti_support">SoporTI: Soporte</string>
    <string name="soporti_user">SoporTI: Usuario</string>
    <string name="users_notice">Para administrar usuarios, por favor diríjase a la consola de Firebase.</string>
    <string name="documentation">Documentación</string>
    <string name="documentation_files">Documentación</string>
    <string name="documentation_notice">Si falta documentación, por favor reportar a usuario administrador.</string>
    <string name="filter_by_date">Filtrar por fecha</string>
    <string name="choose_date_from">Seleccione la fecha desde</string>
    <string name="choose_date_to">Seleccione la fecha hasta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter">Filtrar</string>
    <string name="clean_filters">Limpiar filtros</string>
    <string name="priority">Prioridad</string>
    <string name="priority_form">Prioridad:</string>
    <string name="grouper_form">Agrupador:</string>
    <string name="grouper">Agrupador</string>
    <string name="choose_rate">¿Cómo calificaría la atención recibida?</string>
    <string name="response_time_form">Tiempo promedio de respuesta:</string>
    <string name="response_quantity_form">Cantidad promedio de respuestas:</string>
    <string name="satisfaction">Satisfacción</string>
    <string name="satisfaction_form">Puntaje promedio de usuarios:</string>
    <string name="number">Número</string>
    <string name="rating_form">Calificación:</string>
    <string name="rating">Calificación</string>
    <string name="conclude_ticket">Concluir ticket</string>
    <string name="enabled_form">Habilitada:</string>
    <string name="enabled">Habilitada</string>
    <string name="actual_enable_state">Estado actual de habilitación</string>
    <string name="disable">Deshabilitar</string>
    <string name="categories_edit_notice">Al editar una categoría, la misma se habilita automáticamente.</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="my_profile">Mi perfil</string>
</resources>