<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:orderInCategory="10"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView" />

    <item
        android:id="@+id/action_report"
        android:orderInCategory="20"
        android:title="@string/reports"
        android:icon="@drawable/ic_report"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_finished"
        android:orderInCategory="30"
        android:title="@string/finished_tickets"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_new_object"
        android:orderInCategory="40"
        android:title="@string/categories"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_users"
        android:orderInCategory="80"
        android:title="@string/users"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_documentation"
        android:orderInCategory="80"
        android:title="@string/documentation"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>