<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_new"
        android:orderInCategory="10"
        android:title="@string/add"
        android:icon="@drawable/ic_new"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_users"
        android:orderInCategory="80"
        android:title="@string/users"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_categories"
        android:orderInCategory="90"
        android:title="@string/categories"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>