<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:orderInCategory="10"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView" />

    <item
        android:id="@+id/action_finished"
        android:orderInCategory="20"
        android:title="@string/finished_tickets"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_categories"
        android:orderInCategory="90"
        android:title="@string/categories"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>